# adventofcode2025

./: .gitignore  pyproject.toml  utils.py
1/: main.py
2/: main.py
3/: main.py
4/: main.py
5/: main.py
6/: main.py
tests/: conftest.py
tests/3/: test_day3.py  test_main.py
tests/4/: test_day4.py
