[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of Code solutions in Python."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

